[package]
name = "livecards"
version = "0.2.0"
edition = "2021"
description = "Generate beautiful GitHub repository cards"
authors = ["Xevion <xevion@xevion.dev>"]
license = "MIT"
repository = "https://github.com/Xevion/livecards"
keywords = ["github", "cards", "cli", "svg", "png"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
anyhow = "1.0.98"
resvg = "0.45.1"
tiny-skia = "0.11.4"
usvg = "0.45.1"
clap = { version = "4.5.11", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
saphyr = "0.0.6"
phf = { version = "0.11.2" }
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
moka = { version = "0.12.7", features = ["future"] }
once_cell = "1.19.0"
png = "0.17.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }




[build-dependencies]
phf_codegen = "0.11.2"
serde = { version = "1.0.204", features = ["derive"] }
saphyr = "0.0.6"
reqwest = { version = "0.12.5", features = ["blocking"] }




